nginx-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx

spec:
  type: ClusterIP

  selector:
    app: nginx

  ports:
     - name: http
       protocol: TCP
       port: 80
       targetPort: 80

     - name: app
       protocol: TCP
       port: 8000
       targetPort: 8000
